applications/software/home1/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  selector:
    app: paperless
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
