applications/software/home1/paperless/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
spec:
  parentRefs:
  - name: kgateway
    namespace: kgateway
    sectionName: https
  hostnames:
  - "paperless.yewolf.fr"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: paperless
      port: 8000
      weight: 1
    timeouts:
      request: 0s
      backendRequest: 0s
    matches:
    - path:
        type: PathPrefix
        value: /
